--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
     <div id="message-page" class="page page-hidden">
         <div class="container p-8 md:p-12 max-w-md mx-4 text-center">
             <div class="message-container p-4">
-                <h2 class="text-3xl font-bold text-white mb-6">ข้อความถึงน้องแก้มบุ๋ม</h2>
+                <h2 class="text-3xl font-bold text-white mb-6">ถึงแก้มบุ๋ม</h2>
                 <div id="message-content" class="text-white text-lg mb-8">
                     <!-- ข้อความจะถูกเพิ่มตรงนี้ -->
-                    <p>สุขสั้นวันครบรอบนะครับพวกเราผ่านอะไรกันมาเยอะมากเลยครบรอบเดือนที่5แล้วก็ขอไห้หนูมีความสุขอยู่ดื้อไปจนแก่เลยย รักนะคับบ🤪🤪</p>
+                    <p>สุขสั้นวันครบรอบนะครับพวกเราผ่านอะไรกันมาเยอะมากเลยครบรอบเดือนที่5แล้วก็ขอไห้หนูมีความสุขอยู่ดื้อไปจนแก่เลยย
+                        รักนะคับบ🤪🤪</p>
                 </div>
             </div>
             <button id="back-btn" class="bg-white text-red-500 font-bold py-2 px-6 rounded-full text-lg hover:bg-red-50 transition-all">
@@ -175,7 +176,7 @@
             }
             
             // สร้างหัวใจทุกๆ 150ms (เพิ่มความถี่)
-            setInterval(createHeartEmoji, 150);
+            setInterval(createHeartEmoji, 300);
             
             // สร้างหัวใจเริ่มต้นจำนวนมาก
             for (let i = 0; i < 50; i++) {
