--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
                 <h2 class="text-3xl font-bold text-white mb-6">ถึงแก้มบุ๋ม</h2>
                 <div id="message-content" class="text-white text-lg mb-8">
                     <!-- ข้อความจะถูกเพิ่มตรงนี้ -->
-                    <p>สุขสั้นวันครบรอบนะครับพวกเราผ่านอะไรกันมาเยอะมากเลยครบรอบเดือนที่5แล้วก็ขอไห้หนูมีความสุขอยู่ดื้อไปจนแก่เลยย
-                        รักนะคับบ🤪🤪</p>
+                    <p>สุขสั้นวันครบรอบนะครับพวกเราผ่านอะไรกันมาเยอะมากเลยครบรอบเดือนที่5แล้วก็ขอไห้หนูมีความสุขอยู่ดื้อไปจนแก่เลยย         รักนะคับบ🤪🤪</p>
                 </div>
             </div>
             <button id="back-btn" class="bg-white text-red-500 font-bold py-2 px-6 rounded-full text-lg hover:bg-red-50 transition-all">
